--- a/client/src/CSS/login.module.css
+++ b/client/src/CSS/login.module.css
@@ -7,7 +7,7 @@
     padding: 0;
   } */
   .LOGINPAGE {
-    background-image: linear-gradient(90deg, #c7c5f4, #776bcc);
+    /* background-image: linear-gradient(90deg, #c7c5f4, #776bcc); */
     background-image: url('../CSS/images/img-7.png');
     background-size: cover; 
     margin: 0;
@@ -20,6 +20,7 @@
     overflow-y: hidden;
     box-sizing: border-box;
   }
+  
   .container {
     display: flex;
     align-items: center;
@@ -31,7 +32,7 @@
   /* Apply styles only to elements within the login page */
   .login-page {
     font-family: Arial, sans-serif;
-    background: linear-gradient(90deg, #155d07, #269b03);
+    background: linear-gradient(90deg, #47a532, #255916);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -39,11 +40,11 @@
   }
   
   .screen {
-    background: linear-gradient(90deg, #1f6311, rgb(11, 110, 21));
+    background: linear-gradient(90deg, #58a048, #29581b);
     position: relative;
     height: 600px;
     width: 360px;
-    box-shadow: 0px 0px 24px #155103;
+    box-shadow: 0px 0px 24px #255915;
   }
   
   .screen__content {
@@ -71,7 +72,7 @@
   .screen_background_shape1 {
     height: 520px;
     width: 520px;
-    background: #fff;
+    background: #fd0101;
     top: -50px;
     right: 120px;
     border-radius: 0 72px 0 0;
@@ -80,7 +81,7 @@
   .screen_background_shape2 {
     height: 220px;
     width: 220px;
-    background: #205111;
+    background: #8acc76;
     top: -172px;
     right: 0;
     border-radius: 32px;
@@ -89,7 +90,7 @@
   .screen_background_shape3 {
     height: 540px;
     width: 190px;
-    background: linear-gradient(270deg, #1b640c, #155501);
+    background: linear-gradient(270deg, #f62804, #d6a08a);
     top: -24px;
     right: 0;
     border-radius: 32px;
@@ -98,7 +99,7 @@
   .screen_background_shape4 {
     height: 400px;
     width: 200px;
-    background: #1e5a0d;
+    background: #fa1500;
     top: 420px;
     right: 50px;
     border-radius: 60px;
@@ -177,7 +178,7 @@
     text-align: center;
     bottom: 0px;
     right: 0px;
-    color: #fff;
+    color: #fd0a0a;
   }
   
   .social-icons {
